--- a/Sections/14_Appendix_B.Rmd
+++ b/Sections/14_Appendix_B.Rmd
@@ -93,7 +93,7 @@ knitr::include_graphics(here::here('Images', 'appendix-b', 'Figure S13.pdf'))
 \captionsetup{width=6.5in}
 \renewcommand{\arraystretch}{0.5}
 
-```{r tabb1, eval = TRUE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+```{r tabb1, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
 readr::read_csv(here::here('Tables', 'appendix b', 'table s1.csv')) %>%
   group_by(Celltype) %>%
   slice_min(order_by = p_value, n = 100) %>%
@@ -105,7 +105,7 @@ readr::read_csv(here::here('Tables', 'appendix b', 'table s1.csv')) %>%
 
 \captionsetup{width=6.5in}
 
-```{r tabb2, eval = TRUE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+```{r tabb2, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
 readr::read_csv(here::here('Tables', 'appendix b', 'table s2.csv')) %>%
   group_by(Celltype) %>%
   slice_min(order_by = p_value, n = 100) %>%
@@ -117,7 +117,7 @@ readr::read_csv(here::here('Tables', 'appendix b', 'table s2.csv')) %>%
 
 \captionsetup{width=6.5in}
 
-```{r tabb3, eval = TRUE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+```{r tabb3, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
 readr::read_csv(here::here('Tables', 'appendix b', 'table s3.csv')) %>%
   group_by(Celltype) %>%
   slice_max(order_by = width , n = 100) %>%
@@ -129,7 +129,7 @@ readr::read_csv(here::here('Tables', 'appendix b', 'table s3.csv')) %>%
 
 \captionsetup{width=6.5in}
 
-```{r tabb4, eval = TRUE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+```{r tabb4, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
 readr::read_csv(here::here('Tables', 'appendix b', 'table s4.csv'))  %>%
   group_by(Celltype) %>%
   slice_max(order_by = width , n = 100) %>%
