--- a/Sections/14_Appendix_B.Rmd
+++ b/Sections/14_Appendix_B.Rmd
@@ -90,6 +90,12 @@ knitr::include_graphics(here::here('Images', 'appendix-b', 'Figure S13.pdf'))
 
 <!----- Tables---->
 
+<!--- set NAs to print as blanks -->
+
+```{r echo=FALSE, results='asis'}
+options(knitr.kable.NA = '')
+```
+
 \captionsetup{width=6.5in}
 \renewcommand{\arraystretch}{0.5}
 
@@ -157,7 +163,8 @@ readr::read_csv(here::here('Tables', 'appendix b', 'table s5.csv')) %>%
 readr::read_csv(here::here('Tables', 'appendix b', 'table s6.csv')) %>%
   kableExtra::kbl(
   booktabs = TRUE,
-  caption = 'KEGG enrichment for cell DMCs.')
+  caption = 'KEGG enrichment for cell DMCs.') %>%
+  kableExtra::kable_styling(latex_options = "scale_down")
 ```
 
 \captionsetup{width=6.5in}
@@ -181,7 +188,7 @@ readr::read_csv(here::here('Tables', 'appendix b', 'table s8.csv')) %>%
 
 \captionsetup{width=6.5in}
 
-```{r tabb9, eval = TRUE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+```{r tabb9, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
 readr::read_csv(here::here('Tables', 'appendix b', 'table s9.csv')) %>%
   kableExtra::kbl(
   booktabs = TRUE,
@@ -191,7 +198,7 @@ readr::read_csv(here::here('Tables', 'appendix b', 'table s9.csv')) %>%
 
 \captionsetup{width=6.5in}
 
-```{r tabb10, eval = TRUE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+```{r tabb10, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
 readr::read_csv(here::here('Tables', 'appendix b', 'table s10.csv')) %>%
   kableExtra::kbl(
   booktabs = TRUE,
