--- a/Sections/04_Preface.Rmd
+++ b/Sections/04_Preface.Rmd
@@ -12,19 +12,31 @@ Parts of this dissertation have been published and include work performed by col
 
 **Chapter 1**
 
-Parts of the introduction has been published as a book chapter. A version of the Introduction has been published as a book chapter. Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta. In: Leung PCK, Qiao J, editors. Human Reproductive and Prenatal Genetics. Academic Press; 2019. p. 293–311.
+A version of Chapter 1 has been published as a book chapter. Robinson WP, Peñaherrera MS, Konwar C, Yuan V, Wilson SL. Chapter 13 - Epigenetic Modifications in the Human Placenta. In: Leung PCK, Qiao J, editors. Human Reproductive and Prenatal Genetics. Academic Press; 2019. p. 293–311.
+
 Additional sections of the introduction have been accepted to be published as another book chapter. 
+
+Copyright © 2019 Elsevier Inc.
 
 **Chapter 2**
 
-Yuan, V., Price, E.M., Del Gobbo, G. et al. Accurate ethnicity prediction from placental DNA methylation data. Epigenetics & Chromatin 12, 51 (2019). https://doi.org/10.1186/s13072-019-0296-3
+A version of chapter 2 has be published in BMC Epigenetics & Chromatin. Yuan, V., Price, E.M., Del Gobbo, G. et al. Accurate ethnicity prediction from placental DNA methylation data. Epigenetics & Chromatin 12, 51 (2019).
 
-The data, text, figures, and tables published in this article are included in Chapter 2. Placental DNA methylation array data was downloaded from GEO, an open-access data repository. Project and experimental design was done by Dr. Magda Price, Dr. Giulia Del Gobbo, and professor Wendy Robinson. I conducted data quality control and preprocessing, performed statistical analysis on ethnicity and DNA methylation, trained machine learning models on the data, and wrote the manuscript. Professor Sara Mostafavi provided feedback on statistical analyses. Professor Brian Cox, Dr. Alexandra M. Binder, professor Karin B. Michels, and professor Carmen Marsit provided additional placental data, and helped write the manuscript. All authors participated in manuscript revisions.
+Project and experimental design was done by Dr. Magda Price, Dr. Giulia Del Gobbo, and professor Wendy Robinson. I conducted data quality control and preprocessing, performed statistical analysis on ethnicity and DNA methylation, trained machine learning models on the data, and wrote the manuscript. Professor Sara Mostafavi provided feedback on statistical analyses. Professor Brian Cox, Dr. Alexandra M. Binder, professor Karin B. Michels, and professor Carmen Marsit provided additional placental data, and helped write the manuscript. All authors participated in manuscript revisions. Data, text, figures and 
+tables published in this article are contained in Chapter 2.
+
+© Yuan _et al._ 2019, under the Creative Commons Attribution 4.0 International 
+License (http://creativecommons.org/licenses/by/4.0/).
 
 **Chapter 3**
 
-Yuan, V., Hui, D., Yin, Y. et al. Cell-specific characterization of the placental methylome. BMC Genomics 22, 6 (2021). https://doi.org/10.1186/s12864-020-07186-6
+A version of chapter 3 has be published in BMC Genomics. Yuan, V., Hui, D., Yin, Y. et al. Cell-specific characterization of the placental methylome. BMC Genomics 22, 6 (2021).
 
-The data, text, figures, and tables published in this article are included in Chapter 3. Placental samples were ascertained through the Robinson and Beristain labs. Professor Wendy Robinson, professor Alex Beristain, Dr. Maria Penaherrera design the project. I performed analysis of the data and wrote the manuscript. Desmond Hui helped refine the cell-sorting protocol and collected samples, with help of Dr. Maria Penaherrera and professor Alex Beristain. Yifan Yin and I created the interactive data exploration app. All authors helped revise the final manuscript.
+Placental samples were ascertained through the professor Robinson and professor Beristain labs. Professor Wendy Robinson, professor Alex Beristain, Dr. Maria Penaherrera design the project. I performed analysis of the data and wrote the manuscript. Desmond Hui helped refine the cell-sorting protocol and collected samples, with help of Dr. Maria Penaherrera and professor Alex Beristain. Yifan Yin and I created the interactive data exploration app. All authors helped revise the final manuscript. The data, text, figures, and tables published in this article are included in Chapter 3.
+
+© Yuan _et al._ 2021, under the Creative Commons Attribution 4.0 International 
+License (http://creativecommons.org/licenses/by/4.0/).
 
 **Chapter 4**
+
+**Chapter 5**
