Intro - DNAm, human populations

--- a/References/references.bib
+++ b/References/references.bib
@@ -1883,3 +1883,40 @@ PMCID: PMC5587781}
 PMCID: PMC6688210
 PMID: 31399127}
 }
+
+@article{bell2011,
+	title = {DNA methylation patterns associate with genetic and gene expression variation in HapMap cell lines.},
+	author = {{Bell}, {Jordana T} and {Pai}, {Athma A} and {Pickrell}, {Joseph K} and {Gaffney}, {Daniel J} and {Pique-Regi}, {Roger} and {Degner}, {Jacob F} and {Gilad}, {Yoav} and {Pritchard}, {Jonathan K}},
+	year = {2011},
+	date = {2011},
+	journal = {Genome biology},
+	pages = {R10--R10},
+	volume = {12},
+	number = {1},
+	doi = {10.1186/gb-2011-12-1-r10},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21251332}
+}
+
+@article{price2006a,
+	title = {Principal components analysis corrects for stratification in genome-wide association studies},
+	author = {{Price}, {A. L.} and {Patterson}, {N. J.} and {Plenge}, {R. M.} and {Weinblatt}, {M. E.} and {Shadick}, {N. A.} and {Reich}, {D.}},
+	year = {2006},
+	date = {2006},
+	journal = {Nat Genet},
+	volume = {38},
+	doi = {10.1038/ng1847},
+	url = {https://doi.org/10.1038/ng1847}
+}
+
+@article{zhou2017b,
+	title = {Comprehensive characterization, annotation and innovative use of Infinium DNA methylation BeadChip probes},
+	author = {{Zhou}, {Wanding} and {Laird}, {Peter W.} and {Shen}, {Hui}},
+	year = {2017},
+	date = {2017},
+	journal = {Nucleic Acids Research},
+	pages = {gkw967--gkw967},
+	volume = {45},
+	number = {4},
+	doi = {10.1093/nar/gkw967},
+	url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkw967}
+}
