Add research obj and hypothesis, add maternal signal intro

--- a/References/references.bib
+++ b/References/references.bib
@@ -1920,3 +1920,84 @@ PMID: 31399127}
 	doi = {10.1093/nar/gkw967},
 	url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkw967}
 }
+
+@article{konwar2019,
+	title = {Considerations when processing and interpreting genomics data of the placenta},
+	author = {{Konwar}, {Chaini} and {Del Gobbo}, {Giulia} and {Yuan}, {Victor} and {Robinson}, {Wendy P.}},
+	year = {2019},
+	month = {09},
+	date = {2019-09-01},
+	journal = {Placenta},
+	pages = {57--62},
+	series = {TR: Clinical Growth via Placenta},
+	volume = {84},
+	doi = {10.1016/j.placenta.2019.01.006},
+	url = {http://www.sciencedirect.com/science/article/pii/S0143400418311470}
+}
+
+@article{turco2019,
+	title = {Development of the human placenta},
+	author = {{Turco}, {Margherita Y.} and {Moffett}, {Ashley}},
+	year = {2019},
+	month = {11},
+	date = {2019-11-15},
+	journal = {Development},
+	volume = {146},
+	number = {22},
+	doi = {10.1242/dev.163428},
+	url = {https://dev.biologists.org/content/146/22/dev163428},
+	note = {Publisher: Oxford University Press for The Company of Biologists Limited
+Section: REVIEW
+PMID: 31776138},
+	langid = {en}
+}
+
+@article{price2016,
+	title = {Profiling placental and fetal DNA methylation in human neural tube defects},
+	author = {{Price}, {E Magda} and {Peñaherrera}, {Maria S} and {Casamar}, {Elodie Portales} and {Pavlidis}, {Paul} and {Allen}, {Margot I Van} and {Mcfadden}, {Deborah E} and {Robinson}, {Wendy P}},
+	year = {2016},
+	date = {2016},
+	journal = {Epigenetics & Chromatin},
+	pages = {1--14},
+	doi = {10.1186/s13072-016-0054-8}
+}
+
+@article{wilson2018a,
+	title = {Mining DNA methylation alterations towards a classification of placental pathologies},
+	author = {{Wilson}, {S. L.} and {Leavey}, {K.} and {Cox}, {B. J.} and {Robinson}, {W. P.}},
+	year = {2018},
+	date = {2018},
+	journal = {Hum Mol Genet},
+	volume = {27},
+	doi = {10.1093/hmg/ddx391},
+	url = {https://doi.org/10.1093/hmg/ddx391}
+}
+
+@article{wan2019,
+	title = {Quality control measures for placental sample purity in DNA methylation array analyses},
+	author = {{Wan}, {Qianhui} and {Leemaqz}, {Shalem Yiner-Lee} and {Pederson}, {Stephen Martin} and {McCullough}, {Dylan} and {McAninch}, {Dale Christopher} and {Jankovic-Karasoulos}, {Tanja} and {Smith}, {Melanie Denise} and {Bogias}, {Konstantinos Justinian} and {Liu}, {Ning} and {Breen}, {James} and {Roberts}, {Claire Trelford} and {Bianco-Miotto}, {Tina}},
+	year = {2019},
+	month = {12},
+	date = {2019-12},
+	journal = {Placenta},
+	pages = {8--11},
+	volume = {88},
+	doi = {10.1016/j.placenta.2019.09.006},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7705927/},
+	note = {PMID: 31569011
+PMCID: PMC7705927}
+}
+
+@article{morin2017,
+	title = {Maternal blood contamination of collected cord blood can be identified using DNA methylation at three CpGs},
+	author = {{Morin}, {Alexander M.} and {Gatev}, {Evan} and {McEwen}, {Lisa M.} and {MacIsaac}, {Julia L.} and {Lin}, {David T. S.} and {Koen}, {Nastassja} and {Czamara}, {Darina} and {Räikkönen}, {Katri} and {Zar}, {Heather J.} and {Koenen}, {Karestan} and {Stein}, {Dan J.} and {Kobor}, {Michael S.} and {Jones}, {Meaghan J.}},
+	year = {2017},
+	date = {2017},
+	journal = {Clinical Epigenetics},
+	pages = {75},
+	volume = {9},
+	doi = {10.1186/s13148-017-0370-2},
+	note = {PMID: 28770015
+PMCID: PMC5526324},
+	langid = {eng}
+}
