--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -17,8 +17,6 @@ Human Reproductive and Prenatal Genetics.
 Academic Press; 2019.
 p. 293--311.
 
-<!-- Karin michels book chapter-->
-
 ## Dissertation context and overview
 
 The placenta is a key component to the healthy development of the fetus during pregnancy.
@@ -88,7 +86,7 @@ Chorionic villus cultures yield the predominant growth of fibroblast cells, whic
 Our current understanding of pathological diseases that affect the placenta is contributed predominantly from bulk-tissue profiling studies, which suffer from the limitation that cellular heterogeneity can result in the dilution of cell-specific signals and the creation of spurious ones.
 More targeted studies investigating cell-specific signatures will contribute to our understanding of changes associated with normal placental functioning as well as of abnormal ones.
 
-## DNA methylation in placental cell types
+### Cell-specific placental DNA methylation
 
 A well- functioning placenta is critical for the healthy development of the fetus during pregnancy.
 DNA methylation (DNAm) profiling of the placenta has been increasingly used to characterize underlying processes associated with adverse perinatal outcomes (e.g. maternal preeclampsia, fetal growth restriction and preterm birth) as well as to study the influence of maternal exposures on epigenetic programming.
@@ -101,27 +99,34 @@ EVT are motile cells that travel to maternal tissue and remodel maternal vascula
 As a consequence of its distinct developmental origin, dramatic differences in DNAm between placenta and somatic tissues have been observed [@robinson2015]. Globally, the placenta is hypomethylated compared to other tissues, which was originally attributed to reduced methylation of repetitive element DNAm [@cotton2009; @perrin2007], but was later resolved to be primarily due to placental-specific partially methylated domains (PMDs) [@schroeder2013]. PMDs are long regions of intermediate/low DNAm surrounded by regions of higher DNAm that exist in a highly cell-specific fashion [@salhab2018]. It is unclear if these PMDs have a distinct function or are footprints of earlier developmental events between embryonic and extraembryonic tissues. Parent-of origin specific DNAm, which is associated with genomic imprinting, is also more commonly found in the placenta than other tissues [@renfree2013]. Almost all known imprinted genes are imprinted in the placenta, and many are exclusively imprinted in the placenta [@hanna2016; @court2014; @hamada2016; @sanchez-delgado2016]. Interestingly, a number of placental-specific imprinted genes are polymorphically imprinted [@hanna2016]. It is possible that cellular and genetic heterogeneity can contribute to polymorphic imprinting, as well as variability in DNAm generally. Supporting this, a significant role for genetic control of placental DNAm variation was recently characterized [@delahaye2018].
 These studies have contributed to our understanding of the unique epigenetics of the placenta, but it remains unclear if these features are maintained in all constituent placental cell types or are confined to specific ones.
 
+### Cell deconvolution
+
 Placental DNAm is often studied in the context of health in relation to disease and environmental exposures.
 A common study design is the epigenome-wide association study (EWAS) [@flanagan2015], where differentially methylated CpGs (DMCs) are identified in a high-throughput manner, usually with microarray or sequencing based approaches. However, placental DNAm studies are almost all carried out using whole CV and are therefore subject to challenges of interpretability due to potential cell composition variability [@teschendorff2017]. Unlike other tissues, such as adult blood and umbilical cord blood, addressing cell composition variability in placenta is difficult due to a lack of reference placental DNAm profiles, which enables bioinformatic estimation of cell composition from cellular deconvolution techniques [@teschendorff2017a]. These methods operate by modelling the whole tissue measurements as a weighted sum of cell type -specific DNAm signatures, where the weights correspond to the relative proportion of each constituent cell type in the whole tissue sample, and can be determined using least-squares or non-constrained regression approaches [@teschendorff2017a; @houseman2012; @newman2015].
 Without reference DNAm profiles for each cell population, researchers sometimes account for cell composition using reference-free deconvolution methods.
 However, the effectiveness of reference-free deconvolution in capturing cell composition variation has not yet been assessed in placenta.
 
-To address these challenges, in this study we have generated DNAm reference profiles for 4 major human placental cell populations using the 850k Illumina EPIC DNA methylation microarray, which profiles more than 850,000 CpGs.
-Our study is the first to characterize the DNAm of major placental cell populations with a high-resolution approach, across first trimester and term placentas.
-We show that cell-specific DNAm occurs at thousands of CpG sites, of which a subset can be used to infer cell composition using cellular deconvolution.
-Our study underscores the importance of cell-specific approaches in placental studies, especially when measuring epigenetic features such as DNAm.
+## Maternal signal in placental DNA methylation data
 
-## Other major sources of variation in placental DNA methylation
+Illumina high-density microarray profiling for DNAm has advanced placental research by identifying epigenetic processes associated with placental function in relation to maternal environment, genetics, and perinatal health [@konwar2019]. Critical to these studies is the development of bioinformatic tools to process and analyze DNAm data. Recently, sample contamination, which can result in obscured measurements, has been shown to be prevalent in EWAS data [@heiss2018]. Sex mismatches and, more in general, misannotation of samples is a problem that has been previously demonstrated in other types of genomic studies [@turco2019]. Heiss and Just 2018 used two bioinformatic approaches to determine whether samples measured on the Illumina 450k and EPIC DNAm microarrays are contaminated or misannotated. The first approach estimates the amount of mixing of distinct genotypes in a DNAm array sample, by measuring the amount of outlying signal at 59-65 SNP probes, which increases as mixing between genetically distinct individuals occur. The second approach identifies samples that have a pattern of signal intensity on the X and Y chromosome probes that is consistent with mixing of samples of different sex. This second approach is only sensitive to those cases where the sexes of the mixed samples are distinct. Despite most EWAS having some level of data quality control and sample preprocessing, Heiss and Just 2018 demonstrate that misannotation and sample contamination is relatively common in DNAm studies, but also importantly note that contamination is identifiable by their approaches and therefore addressable in downstream analysis.
 
-## Referencing figures
+In placental research, where embryo-derived chorionic villi are normally sampled, there is an added challenge of avoiding contamination with maternal tissue as the placenta is directly attached to the maternal uterine wall and bathed in maternal blood [@konwar2018]. Because maternal cells from decidual tissue are distinct in both function and epigenetic profile than placental chorionic villi cells, contamination from maternal tissues can obscure measurements of DNAm and make interpretation difficult [@price2016]. Compounding this, certain placental-related conditions (e.g. involving placental inflammation) are associated with infiltration of maternal immune cells into the intervillous space and even the villi themselves (e.g. chorioamnionitis), making phenotype-associated DNAm profiles difficult to discern whether epigenetic reprogramming is occurring or if simply the underlying cell composition is changing [@wilson2018a]. Recently, maternal macrophages, although small in number, have been identified and characterized as a normal component of placental cell composition throughout gestation [@leavey2018]. Although it may be challenging to separate maternal from placental tissue during sample processing, knowing the degree of maternal cell contamination for each sample can potentially aid downstream analyses and may be relevant to the biological processes of interest. Despite this, the degree that maternal cell contamination influences placental studies has been minimally explored. Wan 2019 describe a set of quality control measures based on clustering patterns between control placental and maternal tissue samples, and PMDs, that were used to assess maternal contamination in placental DNAm data [@wan2019]. In particular, Wan 2019 emphasized that samples obtained from early termination pregnancies are especially at risk of contamination during sample processing. Maternal contamination is also relevant in cord blood studies where maternal blood contamination is at higher risk. Morin 2017 assessed maternal contamination in cord blood DNAm samples using tissue-specific approaches, such as using highly cord blood -specific sites to predict contaminated and non-contaminated samples [@morin2017].
+Interestingly, Morin 2017 explored using quality measurements (i.e. "no-calls") from genotyping data for samples that had also been measured on the Illumina PsychChip (genotyping array) to confirm contamination calls, but in contrast to Heiss 2018, found that the sensitivity of the genotyping data for genotype mixing was poor.
 
-This text will render with a figure referenced (Figure \@ref(fig:figureTitle)).
+## Research objectives and hypothesis
 
-```{r figureTitle, eval = T, echo = T, fig.width = 3, fig.height = 2, echo=FALSE, fig.cap="This is the long caption of the figure that will apear in the main text.", fig.scap = "This is the short title for the figure list", out.extra=''}
+Previous work in placental DNAm research involves mostly EWAS-type study designs assessing placental phenotypes such as preeclampsia, chorioamnionitis, neural tube defects, and environment.
+However, these studies are limited to existing bioinformatic tools, which have not been extensively explored for their appropriateness and effectiveness in placental data.
+Moreover, the underlying DNA methylation of the various cell components of the placental chorionic villi has not yet been characterized.
 
-# Call the image
-img <- readPNG("../Images/Professortocat.png")
+In this dissertation I aimed to characterize and identify the major sources of variation in placental DNAm, and develop bioinformatic approaches to infer, model, and characterize these variables from placental DNAm data directly.
+I hypothesize that cell composition, genetic ancestry and ethnicity, and maternal DNA contamination can be identified and predicted from placental chorionic villi DNAm data.
+To assess this, I performed:
 
-# Print the image
-grid.raster(img)
-```
+1.  A study of predicting ethnicity and genetic ancestry from placental DNAm data using multiple placental GEO datasets.
+
+2.  A study of DNAm and placental cell types across gestation.
+
+3.  A study of identifying maternal signal from placental DNAm data using multiple placental GEO datasets.
+
+These studies contribute to further insights into major contributors of variation in placental DNA methylation, and provide useful bioinformatic approaches for conducting better placental DNA methylation research.
