--- a/Sections/10_Chapter_3.Rmd
+++ b/Sections/10_Chapter_3.Rmd
@@ -98,7 +98,7 @@ Trophoblast DMCs were enriched for two KEGG pathways, "ECM-receptor interaction"
 
 (ref:ch3fig1cap) Genome-wide characterization of placental cell DNA methylation. **a** Principal components analysis (PCA) was applied to all samples and CpGs. Samples are projected onto axes PC1 and PC2 which account for 41% and 23% total variance, respectively. **b** Results from the differential methylation analysis using the R package *limma* are shown here. DMCs, defined as those tests passing a Bonferroni-adjust *p*-value \<0.01, and a difference in group means \>0.25, were divided into less methylated and more methylated compared to all other cell types. **c** Enrichment analysis of term cell-specific DMCs was carried out on genomic elements using a chi-squared test and a Bonferroni-adjusted p-value \<0.01. The expected (background) frequency, which is the percentage of total tested CpGs in each genomic element, is shown as a black line. **d** Average term placental cell-specific DNA methylation across *TFAP2C* transcripts on chromosome 6, and **e** *INHBA* transcripts on chromosome 7. Differentially methylated regions (defined as regions with a high density of differentially methylated CpGs), are highlighted with a grey background. Y axis ranges from 0 to 100% DNA methylation
 
-```{r ch3fig1, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig1cap)", fig.align='center',  out.extra=''}
+```{r ch3fig1, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig1cap)",fig.scap = "Genome-wide characterization of placental cell DNA methylation", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch3', 'Figure1.pdf'))
 ```
 
@@ -127,7 +127,7 @@ This suggests that *DNMT1* is imprinted in TB, SC, and EC, but not in HB.
 
 (ref:ch3fig2cap) Differential methylation at DNA methylation -regulating genes. **a** On a per-gene basis, the number of promoter CpGs that are differentially methylated by at least one cell type, out of the total number of promoter CpGs per gene. The y=x line is shown (blue), where genes with 100% of promoter CpGs are differentially methylated. The green line is a smoothed average. **b** Distribution of the percentage of promoter CpGs per gene that are differentially methylated. The dotted line represents an array-wide average. **c** DNA methylation at CpGs associated with *DNMT1* for term placental samples (top). CpGs in CpG islands, imprinted regions, PMDs, and enhancers are indicated (middle). Associated UCSC transcripts and their genomic elements (promoter, 5′ UTR, exons, introns, 3'UTR) are displayed (bottom)
 
-```{r ch3fig2, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig2cap)", fig.align='center',  out.extra=''}
+```{r ch3fig2, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig2cap)", fig.scap = "Differential methylation at DNA methylation -regulating genes", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch3', 'Figure2.pdf'))
 ```
 
@@ -145,7 +145,7 @@ The direction of DNAm at these CpGs was mostly consistent with expected patterns
 
 (ref:ch3fig3cap) Characterization of enzymatically-separated syncytiotrophoblast and Hofbauer cell DNAm to closely related cell types. **a** Syncytiotrophoblast samples (*n*=5) were projected onto principal components PC1 and PC2. Original samples used for constructing these PCs (Fig. [1](https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-020-07186-6#Fig1)a) are shown (chorionic villi: dark red, trophoblast: yellow, all others: grey). Syncytiotrophoblast (orange) cluster with the chorionic villi and trophoblast samples. **b** Clustering on the top 1000 variable CpGs between chorionic villi, syncytiotrophoblast, and trophoblast samples. Hierarchical clustering with Euclidean distance was used for both CpG-wise (rows) and sample-wise (columns) clustering. DNAm is shown as a range between 0 and 100%. **c** Density plots are shown for select differentially methylated CpGs, which were identified using limma, with a Bonferroni adjust *p*\<0.01, and a mean difference in DNAm \>25%. CpGs are shown along the y-axis with their locational relationship (shown in brackets) to their associated gene (left). DNA methylation is shown on the x-axis. **d** Clustering on the top 1000 variable CpGs between Hofbauer cells and cord blood cell types. Hierarchical clustering with Euclidean distance was used for both CpG-wise and sample-wise clustering. WBC: whole cord blood, nRBC: nucleated red blood cells, NK: natural killer cells, CD4T: CD4+ T cells, CD8T: CD8 T cells, Gran: granulocytes, Bcell: B cells, DNAm: DNA methylation.
 
-```{r ch3fig3, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig3cap)", fig.align='center',  out.extra=''}
+```{r ch3fig3, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig3cap)", fig.scap = "Characterization of enzymatically-separated syncytiotrophoblast and Hofbauer cell DNAm to closely related cell types", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch3', 'Figure3.pdf'))
 ```
 
@@ -169,7 +169,7 @@ In summary, the methylation levels at CpGs in PMD regions were at the expected l
 
 (ref:ch3fig4cap) DNA methylation at partially methylated domains (PMDs), and imprinted differentially methylated regions (DMRs). **a** The percentage (y-axis) of CpGs in placental PMDs, falling into specific methylation intervals (0--20%, 20--40%, 40--60%, etc.) is shown for each cell type and trimester. **b** DNAm across specific regions on chromosome 21 (B) and 4 (**c**). PMDs are highlighted with a grey background. **d** Density plots (y-axis) of imprinted DMRs in term samples, divided into those that are imprinted in multiple tissues, (i.e. non-placental-specific; 1085 CpGs total; top) and placental-specific (981 CpGs total; bottom). The percentage of CpGs falling within 25%--75% is shown above each plot. **e** Cell-specific DNAm at the C19MC placental-specific imprinted DMR. This placental-specific imprint overlies a CpG island upstream of the miRNA cluster. **f** DNAm at placental-specific imprinted region for DCAF10
 
-```{r ch3fig4, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig4cap)", fig.align='center',  out.extra=''}
+```{r ch3fig4, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig4cap)", fig.scap = "DNA methylation at partially methylated domains, and imprinted differentially methylated regions", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch3', 'Figure4.pdf'))
 ```
 
@@ -202,7 +202,7 @@ In contrast, EC DMCs show less DNAm in the term compared to first trimester (77.
 
 (ref:ch3fig5cap) Gestational-age dependent DNA methylation within each placental cell population. **a** The distribution of the changes in DNA methylation between first and third trimester, within each cell type. Only statistically significant (Bonferroni p\<0.01) and biologically relevant (mean change in DNAm \>5%) differences are shown. Number of gestational age associated DMCs are labelled above each plot. **b** Functional enrichment analysis for GO terms tested with the R package *missMethyl*. **c** Functional enrichment analysis for KEGG pathways tested with the R package *missMethyl.* D) Enrichment for genomic features: CpG island-related elements, enhancers, PMDs, and gene features
 
-```{r ch3fig5, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig5cap)", fig.align='center',  out.extra=''}
+```{r ch3fig5, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig5cap)", fig.scap = "Gestational-age dependent DNA methylation within each placental cell population", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch3', 'Figure5.pdf'))
 ```
 
@@ -225,7 +225,7 @@ Reference CpGs determined from first trimester (Figure \@ref(fig:ch3fig6)a) and 
 
 (ref:ch3fig6cap) Assessing cell composition in first trimester and term CV samples. **a** Mean DNAm across each cell type (columns) for 600 first trimester deconvolution reference CpGs selected by minfi::pickCompProbes. CpGs (rows) are hierarchically clustered using euclidean distance. **b** Term reference CpGs. **c** Cell composition of 7 first trimester and 19 third trimester CV samples, estimated with cellular deconvolution using RPC. **d** Cell composition is similar between male and female term samples with respect to estimated percentage of each cell type (y-axis). F: female, M: male. **e** Cell composition is similar between Asian and European/Caucasian third trimester samples
 
-```{r ch3fig6, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig6cap)", fig.align='center',  out.extra=''}
+```{r ch3fig6, eval = T, echo = T, echo=FALSE, fig.cap="(ref:ch3fig6cap)", fig.scap = "Assessing cell composition in first trimester and term CV samples", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'ch3', 'Figure6.pdf'))
 ```
 
